Fix for Bug #70384 	mysqli_real_query(): Unknown type 245 sent by the server